--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <resources>
     <dimen name="normal_4dp">4dp</dimen>
+    <dimen name="line">0.5dp</dimen>
     <dimen name="normal_10dp">10dp</dimen>
+    <dimen name="normal_20dp">20dp</dimen>
+    <dimen name="normal_30dp">30dp</dimen>
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
