--- a/app/src/main/res/layout/activity_add_clothes.xml
+++ b/app/src/main/res/layout/activity_add_clothes.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".addclothes.AddClothesActivity">
-
+    <include layout="@layout/header_view"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_add_clothes_recyl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
