--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="line">#c1bfbf</color>
+    <color name="text_color_999">#999999</color>
+    <color name="text_color_666">#666666</color>
+    <color name="text_color_333">#333333</color>
 </resources>
