--- a/kernel/src/main/res/layout/header_view.xml
+++ b/kernel/src/main/res/layout/header_view.xml
@@ -7,19 +7,31 @@
     android:background="@color/colorPrimary"
     android:orientation="horizontal">
     <ImageView
-        android:id="@+id/o"
         android:onClick="onBackClick"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="20dp"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_back"/>
+
     <TextView
         android:id="@+id/header_view_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="@dimen/normal_header_text_size"
         android:textColor="@android:color/white"
         android:layout_centerInParent="true"
-        android:text="详情"/>
+        android:text="主题"/>
+    <TextView
+        android:id="@+id/header_view_right_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="20dp"
+        android:text="确认"
+        android:onClick="onRightClick"
+        android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/normal_header_text_size"/>
 </RelativeLayout>
