--- a/kernel/src/main/res/values/dimens.xml
+++ b/kernel/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="normal_header">50dp</dimen>
+    <dimen name="normal_header_text_size">18sp</dimen>
 </resources>
