--- a/app/src/main/res/layout/fragment_home_adapter_item.xml
+++ b/app/src/main/res/layout/fragment_home_adapter_item.xml
@@ -8,6 +8,7 @@
         android:id="@+id/home_fragment_adapter_item_cloth_img"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_margin="@dimen/normal_10dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_clothes"/>
 
