--- a/app/src/main/res/color/text_color.xml
+++ b/app/src/main/res/color/text_color.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/text_color_666"
-          android:state_enabled="false"/>
     <item android:color="@color/text_color_333"
+          android:state_enabled="false"/>
+    <item android:color="@color/text_fix_enable"
            android:state_enabled="true"/>
     <item android:color="#666666"/>
 </selector>
