--- a/app/src/main/res/layout/recyclerview_clothes_item.xml
+++ b/app/src/main/res/layout/recyclerview_clothes_item.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="30dp"
+              android:layout_height="35dp"
     android:gravity="center_vertical">
     <TextView
         android:id="@+id/recyclerview_clothes_item_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="型号"
+        android:layout_marginLeft="@dimen/normal_10dp"
         android:textSize="@dimen/high_size"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/normal_10dp"
-        android:layout_marginRight="@dimen/normal_10dp"
-        android:gravity="center">
+        android:layout_marginRight="@dimen/normal_30dp"
+        android:gravity="end">
     <EditText
         android:id="@+id/recyclerview_clothes_item_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
         android:text="H5066"
-        android:gravity="center"
+        android:gravity="end"
         android:minWidth="200dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:enabled="false"
         android:textColor="@color/text_color"
         android:textSize="@dimen/high_size"/>
