--- a/app/src/main/res/layout/fragment_sale_list.xml
+++ b/app/src/main/res/layout/fragment_sale_list.xml
@@ -1,10 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/fragment_sell_list_salelist_rc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <EditText
+            android:id="@+id/fragment_sale_list_year_ed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/normal_50dp"
+            android:gravity="center"
+            android:text="2018"
+            android:hint="年"/>
+        <EditText
+            android:id="@+id/fragment_sale_list_month_ed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="08"
+            android:hint="月"
+            android:minWidth="@dimen/normal_50dp"
+            android:gravity="center"
+            android:layout_marginLeft="@dimen/normal_10dp"
+            android:layout_marginRight="@dimen/normal_10dp"/>
+        <EditText
+            android:id="@+id/fragment_sale_list_day_ed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/normal_50dp"
+            android:gravity="center"
+            android:layout_marginRight="@dimen/normal_10dp"
+            android:text="22"
+            android:hint="日"/>
+        <EditText
+            android:id="@+id/fragment_sale_list_name_ed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/normal_30dp"
+            android:gravity="center"
+            android:text="all"
+            android:hint="人名/拼音"/>
+        <TextView
+            android:id="@+id/fragment_sale_list_find_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/normal_20dp"
+            android:paddingRight="@dimen/normal_20dp"
+            android:paddingTop="@dimen/normal_10dp"
+            android:paddingBottom="@dimen/normal_10dp"
+            android:layout_marginLeft="@dimen/normal_20dp"
+            android:text="查"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_sell_list_salelist_rc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
