--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="normal_10dp">10dp</dimen>
     <dimen name="normal_20dp">20dp</dimen>
     <dimen name="normal_30dp">30dp</dimen>
+    <dimen name="normal_40dp">40dp</dimen>
+    <dimen name="normal_50dp">50dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
