--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,19 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".login.LoginActivity"
+    android:background="@color/back"
     android:padding="@dimen/normal_10dp">
+
+    <ImageView
+        android:layout_width="128dp"
+        android:layout_height="64dp"
+        android:src="@drawable/ic_logo"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/normal_10dp"
+        android:layout_marginBottom="@dimen/normal_30dp"
+        android:text="@string/clothes_app_name"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +29,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/normal_4dp"
+            android:layout_marginRight="@dimen/normal_4dp"
             android:textSize="@dimen/high_size"
             android:text="@string/name"/>
 
@@ -40,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/high_size"
-            android:layout_marginEnd="@dimen/normal_4dp"
+            android:layout_marginRight="@dimen/normal_4dp"
             android:text="@string/pass"/>
 
         <EditText
@@ -48,14 +60,22 @@
             android:layout_width="match_parent"
             android:textSize="@dimen/high_size"
             android:singleLine="true"
+            android:inputType="textPassword"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"/>
     </LinearLayout>
+    <android.support.v7.widget.AppCompatCheckBox
+        android:id="@+id/activity_login_remember_cb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="记住密码"
+        android:layout_gravity="start"
+        android:textSize="@dimen/low_size"/>
 
     <ImageView
         android:id="@+id/activity_login_login_img"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
         android:padding="25dp"
         android:src="@drawable/ic_login"/>
 
