--- a/kernel/src/main/res/layout/header_view.xml
+++ b/kernel/src/main/res/layout/header_view.xml
@@ -8,9 +8,10 @@
     android:orientation="horizontal">
     <ImageView
         android:onClick="onBackClick"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginLeft="10dp"
+        android:padding="10dp"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_back"/>
 
@@ -26,12 +27,13 @@
         android:id="@+id/header_view_right_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="20dp"
         android:text="确认"
         android:onClick="onRightClick"
-        android:visibility="gone"
+        android:visibility="visible"
         android:textColor="@android:color/white"
         android:textSize="@dimen/normal_header_text_size"/>
 </RelativeLayout>
