--- a/app/src/main/res/layout/activity_store_second.xml
+++ b/app/src/main/res/layout/activity_store_second.xml
@@ -5,10 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".addclothes.addbatch.AddClothesActivity">
-    <include layout="@layout/header_view"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_add_clothes_recyl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    tools:context=".storesecond.StoreSecondActivity">
+
 </LinearLayout>
