--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="normal_4dp">4dp</dimen>
     <dimen name="line">0.5dp</dimen>
+    <dimen name="normal_5dp">5dp</dimen>
     <dimen name="normal_10dp">10dp</dimen>
     <dimen name="normal_20dp">20dp</dimen>
     <dimen name="normal_30dp">30dp</dimen>
