--- a/app/src/main/res/drawable/order_list_button_true.xml
+++ b/app/src/main/res/drawable/order_list_button_true.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="21px"></corners>
+    <corners android:radius="5px"></corners>
     <stroke
-        android:width="0.8dp"
+        android:width="@dimen/line"
         android:color="@color/order_1c2c58"></stroke>
 
     <solid android:color="@color/white"></solid>
