--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +9,16 @@
     <include layout="@layout/header_view"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_detail_recycler_view"
+        android:layout_below="@+id/header_view_head_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:overScrollMode="never"/>
 
    <LinearLayout
-       android:layout_marginTop="@dimen/normal_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:layout_marginBottom="@dimen/normal_10dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/activity_detail_sell_img"
@@ -32,4 +34,4 @@
            android:src="@drawable/ic_fix"/>
    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
