--- a/app/src/main/res/layout/activity_store_list.xml
+++ b/app/src/main/res/layout/activity_store_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".storelist.StoreListActivity">
+    tools:context=".clothessecondlist.ClothesSecondActivity">
 
     <include layout="@layout/header_view"/>
 
@@ -23,6 +23,7 @@
             android:background="@drawable/order_list_selector"
             android:gravity="center"
             android:hint="尺码"
+            android:padding="@dimen/normal_5dp"
             android:minWidth="@dimen/normal_50dp"
             android:layout_centerVertical="true"
             android:text=""/>
@@ -33,9 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/normal_10dp"
+            android:background="@drawable/order_list_selector"
             android:layout_marginRight="@dimen/normal_10dp"
             android:gravity="center"
             android:hint="颜色"
+            android:padding="@dimen/normal_5dp"
             android:minWidth="@dimen/normal_50dp"
             android:layout_centerVertical="true"
             android:text=""/>
@@ -46,6 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/normal_10dp"
+            android:padding="@dimen/normal_5dp"
+            android:background="@drawable/order_list_selector"
             android:gravity="center"
             android:hint="店铺"
             android:minWidth="@dimen/normal_50dp"
@@ -56,7 +61,7 @@
             android:id="@+id/activity_store_list_find_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/normal_20dp"
+            android:layout_marginLeft="@dimen/normal_10dp"
             android:background="@drawable/ic_find_backg"
             android:drawableLeft="@drawable/ic_find"
             android:layout_alignParentRight="true"
@@ -66,6 +71,7 @@
             android:paddingRight="@dimen/normal_20dp"
             android:paddingTop="@dimen/normal_10dp"
             android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/normal_10dp"
             android:text="筛选"/>
     </RelativeLayout>
 
